[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Graphics/Menu_Background.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/StartMenuScreen.gd" type="Script" id=3]

[node name="StartMenuScreen" type="TextureRect"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 400.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer2"]
margin_top = 174.0
margin_right = 1920.0
margin_bottom = 225.0
theme = ExtResource( 2 )
text = "gAme title"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -143.5
margin_right = 743.0
margin_bottom = 756.5
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 972.0
margin_bottom = 880.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 952.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "New Game"
expand_icon = true

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 952.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 576.0
margin_right = 952.0
margin_bottom = 860.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_editor_description_": ""
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
